build-8 - added sprites, heads and click events support - many and some changes on everywhere